@@ -1,0 +1,24 @@
+#
+# Simple development makefile
+#
+
+#
+# add more flags here,
+# but don't remove the "+="
+#
+CFLAGS += -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
+CPPFLAGS +=
+LDFLAGS +=
+
+
+all: debug_test
+
+clean:
+	-rm -f debug_test
+
+install:
+
+
+.PHONY: all install clean
+
+# end of development makefile
